# InvisiCrypt

./: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  package-lock.json  package.json  render.yaml  test.cpp  test.http
.github/workflows/: docker-publish.yml  pipeline.yaml
backend/: CMakeLists.txt  build.js  index.js  package-lock.json  package.json
backend/public/: script.js  style.css
backend/src/: Encryptor.cpp  Encryptor.h  ImageStego.cpp  ImageStego.h  Stego.cpp  Stego.h  Utils.cpp  Utils.h  main.cpp  stego_lib.cpp  stego_lib.h
backend/views/: index.ejs
frontend/: app.js  index.html  script.js  style.css  styles.css
public/css/: style.css
public/images/: logo.avif
public/js/: app.js
src/: Encryptor.h  Utils.cpp  main.cpp
views/: index.ejs
